--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -90,23 +90,36 @@ label{
 }
 
 .radio-toolbar label {
+		background-color: white; 
+		color: black; 
+		border: 2px outset #304040;
+		padding: 5px 10px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 16px;
+		margin: 6px 8px;
+		-webkit-transition-duration: 0.2s;
+		transition-duration: 0.2s;
+		cursor: pointer;
+		box-shadow: 0 9px #999;
+		font-weight: bold;
+}
 
-  display: inline-block;
-  background-color: #ffffff;
-  padding: 4px 11px;
-  font-family: "Muli";
-  font-size: 16px;
-  cursor: pointer;
+.radio-toolbar label:hover {
+	background-color: #304040;
+	color: white; 
+}
+
+.radio-toolbar label:active {
+	background-color: #304040;
+	box-shadow: 0 5px #666;
+	transform: translateY(4px);
 }
 
 .radio-toolbar input[type="radio"]:checked+label {
-  background-color: #ffffff;
-}
-
-
-
-a, a:visited, a:hover {
-	text-decoration: none;
+	background-color: #304040;
+	color: white;
 }
 
 textarea, input {
