--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -112,13 +112,13 @@ label{
 }
 
 .radio-toolbar label:active {
-	background-color: #304040;
+	background-color: #2e5884;
 	box-shadow: 0 5px #666;
 	transform: translateY(4px);
 }
 
 .radio-toolbar input[type="radio"]:checked+label {
-	background-color: #304040;
+	background-color: #2e5884;
 	color: white;
 }
 
